Laying the foundation

--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
   </head>
   <body>
     <div id="root"></div>
-    <script
-      src="https://unpkg.com/react@18/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-      crossorigin
-    ></script>
-    <script src="App.js"></script>
+
+    <script type="module" src="App.js"></script>
+
+    <!-- Normal script files are intended to run directly but the modules are meant to be imported. SO whenever we use import or export the script
+    should be of the type "module". -->
   </body>
 </html>
