--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <title>Document</title>
   </head>
   <body>
     <div id="root"></div>
 
-    <script type="module" src="App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 
     <!-- Normal script files are intended to run directly but the modules are meant to be imported. SO whenever we use import or export the script
     should be of the type "module". -->
