--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <title>Document</title>
+    <title>Namaste React</title>
   </head>
   <body>
     <div id="root"></div>
